# Engine

./: .gitignore  CMakeLists.txt  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  UML Class Diagram.txt  application.cpp  application.hpp  command_buff_options.hpp  compile_commands.json  main.cpp  test  vectors.hpp  window.cpp  window.hpp
VulkanTest/: VulkanTest.sln  VulkanTest.vcxproj
VulkanTest/x64/Debug/: VulkanTest.exe.recipe  VulkanTest.ilk  VulkanTest.vcxproj.FileListAbsolute.txt  vc143.idb
VulkanTest/x64/Debug/VulkanTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VulkanTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ext/glfw/include/GLFW/: glfw3.h
include/: application.hpp  buffers.hpp  command_buffer.hpp  device.hpp  framebuffer.hpp  graphics_pipeline.hpp  image.hpp  instance.hpp  object.hpp  renderer.cpp  renderer.hpp  result.hpp  shader.hpp  surface.hpp  swap_chain.hpp  uniform_buffer_object.hpp  vectors.hpp  vertex.hpp  vertex_buffer.hpp  window.hpp
shaders/: shader.vert
src/: application.cpp  buffers.cpp  command_buffer.cpp  device.cpp  framebuffer.cpp  graphics_pipeline.cpp  image.cpp  instance.cpp  main.cpp  object.cpp  shader.cpp  surface.cpp  swap_chain.cpp  vertex_buffer.cpp  window.cpp
test/: main.cpp
tests/: main.cpp
x64/Debug/: Engine.exe.recipe  Engine.ilk  Engine.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
